fix overflow

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -57,7 +57,7 @@ h1 {
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
